--- a/styles.css
+++ b/styles.css
@@ -373,7 +373,7 @@
   * {
     transition-property: padding, border-radius, white-space, display, position, height, width, margin, gap;
     transition-duration: 0.5s;
-    box-sizing: unset;
+    box-sizing: ;
   }
 
   *:focus {
